# mcgl_engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  cpp.hint
engine/libs/: CMakeLists.txt
engine/libs/include/: Camera.h  CubeMap.h  Engine.h  Shader.h  Texture.h  ThreadedWorkerQueue.h  Window.h
engine/libs/include/ActionHandling/: Action.h  ThreadedWorkerQueue.h  actions.h
engine/libs/include/ActionHandling/Action/: Action.h  ActionData.h  AddChunkAction.h  CloseWindowAction.h  CreateCameraAction.h  CreateWindow.h  CreateWindowAction.h  CreateWindowData.h  MoveCameraAction.h  RegisterBlockTypeAction.h  RegisterKeyEventCallbackAction.h  RegisterMouseEventCallbackAction.h  RotateCameraAction.h  SetShaderAction.h  SetShaderData.h  SetTexturesAction.h  StopAction.h  actions.h
engine/libs/include/ActionHandling/Actions/: CreateEngine.h  CreateWindow.h  Run.h
engine/libs/include/Chunk/: Chunk.h  ChunkCollection.h
engine/libs/include/Chunk/Block/: Block.h
engine/libs/include/Chunk/Builder/: ThreadedChunkMeshBuilder.h
engine/libs/include/Coordinates/: BlockCoordinates.h  ChunkCoordinates.h  WorldChunkCoordinates.h  WorldCoordinates.h
engine/libs/include/Definition/: mcgl_engine_def.h
engine/libs/include/Eventing/: KeyEvent.h  KeyEventHandler.h  MouseEvent.h  MouseEventHandler.h
engine/libs/include/Helper/: OpenGLDebug.h  WorldChunkCoordinates.h
engine/libs/include/Logging/: ConsoleLogger.h  ILogger.h  SpdFileLogger.h
engine/libs/include/Mesh/: Face.h  Mesh.h  Vertex.h
engine/libs/include/Renderer/: Renderer.h  Vertex.h  VertexArray.h  VertexBuffer.h
engine/libs/include/Texture/: Texture.h  TextureAtlas.h
engine/libs/include/World/: World.h
engine/libs/include/World/Block/: Block.h  BlockLibrary.h
engine/libs/include/World/Chunk/: Chunk.h  ChunkCollection.h  ChunkMeshBuilder.h  ThreadedChunkMeshBuilder.h
engine/libs/mcgl-engine-core/: CMakeLists.txt
engine/libs/mcgl-engine-core/include/: AssetManager.h  Camera.h  CubeMap.h  Engine.h  Shader.h  Skybox.h  Window.h
engine/libs/mcgl-engine-core/include/ActionHandling/: ThreadedWorkerQueue.h  actions.h
engine/libs/mcgl-engine-core/include/Chunk/: Chunk.h  (+1 more)
engine/libs/mcgl-engine-core/src/: Engine.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  Window.cpp
engine/libs/src/: Engine.cpp  Shader.cpp  Texture.cpp  Window.cpp
engine/libs/src/ActionHandling/: ThreadedWorkerQueue.cpp
engine/libs/src/Chunk/: Chunk.cpp  ChunkCollection.cpp
engine/libs/src/Eventing/: KeyEventHandler.cpp  MouseEventHandler.cpp
engine/libs/src/Helper/: WorldChunkCoordinates.cpp
engine/libs/src/Logging/: ILogger.cpp
engine/libs/src/Mesh/: Mesh.cpp
engine/libs/src/Texture/: TextureAtlas.cpp
engine/libs/src/World/: World.cpp
engine/libs/test/: CMakeLists.txt
engine/libs/test/src/: Coordinates_test.cpp  main.cpp
engine/source/: CMakeLists.txt
engine/source/include/: Camera.h  Shader.h  Texture.h  mcgl-engine-export.h  mcgl-engine.h
engine/source/res/: version.aps  version.h  version.rc
engine/source/src/: Camera.cpp  mcgl-engine.cpp
engine/test/: CMakeLists.txt
engine/test/src/: Camera.h  main.cpp
engine_java_interface/source/: CMakeLists.txt
engine_java_interface/source/src/: MCGLEngineInterface.cpp
engine_java_interface/source/src/Conversion/: cpp_to_java.h
java/source/: CMakeLists.txt
java/source/include/: MCGLEngine.h
java/source/src/: MCGLEngine.cpp
java/source/src/Conversion/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkCoordinates.cpp  ChunkCoordinates.h  ClassDefinitions.h  CppToJavaConverter.h  FieldIDCache.cpp  FieldIDCache.h  JNIHelper.cpp  JNIHelper.h  JavaDefinitions.h  JavaToCppConverter.h  KeyEvent.cpp  KeyEvent.h  KeyEventCallback.cpp  KeyEventCallback.h  KeyEventType.cpp  KeyEventType.h  MethodIDCache.cpp  MethodIDCache.h  MouseEvent.cpp  MouseEvent.h  MouseEventCallback.cpp  MouseEventCallback.h  MouseEventType.cpp  MouseEventType.h  WorldCoordinates.cpp  WorldCoordinates.h  jni_conversion.h
(+143 files in other folders)
